# oxilean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  publish.sh
crates/oxilean/: Cargo.toml  README.md
crates/oxilean-build/: Cargo.toml  README.md  TODO.md
crates/oxilean-build/.oxilean/registry-cache/: foo.pkg-info  math-extra.pkg-info  mathlib.pkg-info  my-pkg.pkg-info  pkg.pkg-info  topology.pkg-info
crates/oxilean-build/src/: buildartifact_traits.rs  buildcache_traits.rs  buildconfig_traits.rs  buildloglevel_traits.rs  buildoutputfilter_traits.rs  buildphase_traits.rs  buildsummary_traits.rs  buildsystemcapabilities_traits.rs  buildsystemerror_traits.rs  functions.rs  lib.rs  oxileanversion_traits.rs  packageid_traits.rs  pluginregistry_traits.rs  targetkind_traits.rs  types.rs  workspaceinfo_traits.rs
crates/oxilean-build/src/analytics/: buildanalytics_traits.rs  functions.rs  mod.rs  timelineeventstate_traits.rs  types.rs
crates/oxilean-build/src/cache_eviction/: adaptivepolicy_traits.rs  cachemanager_traits.rs  cachemanagerwithstats_traits.rs  cachepressurelevel_traits.rs  cachewarmupplan_traits.rs  combinedpolicy_traits.rs  combinedweights_traits.rs  functions.rs  groupedpolicy_traits.rs  lfupolicy_traits.rs  lrupolicy_traits.rs  mod.rs  multitiercache_traits.rs  prioritypolicy_traits.rs  randompolicy_traits.rs  sizebasedpolicy_traits.rs  ttlpolicy_traits.rs  types.rs
crates/oxilean-build/src/cache_invalidation/: functions.rs  mod.rs  types.rs
crates/oxilean-build/src/core_types/: artifactkind_traits.rs  buildenvironment_traits.rs  buildgraph_traits.rs  buildlogentry_traits.rs  buildnotification_traits.rs  buildprofilekind_traits.rs  mod.rs  noopplugin_traits.rs  phasetimings_traits.rs  types.rs
crates/oxilean-build/src/dep_analysis/: functions.rs  mod.rs  types.rs
crates/oxilean-build/src/distributed/: clusterconfig_traits.rs  distributedbuildconfig_traits.rs  distributedbuildplan_traits.rs  distributedcacheconfig_traits.rs  distributedcoordinator_traits.rs  distributedtask_traits.rs  distributedtasklog_traits.rs  distributedtaskstate_traits.rs  faulttolerance_traits.rs  functions.rs  jobschedulerkind_traits.rs  leastloadedstrategy_traits.rs  mod.rs  networkbandwidthestimator_traits.rs  nodehealthreport_traits.rs  randomstrategy_traits.rs  speculativeexecutor_traits.rs  taskpriorityqueue_traits.rs  taskstatesnapshot_traits.rs  types.rs  workercapacitymatrix_traits.rs  workerpool_traits.rs  workerregistry_traits.rs  workstealingqueue_traits.rs
crates/oxilean-build/src/executor/: builddag_traits.rs  buildexecutionreport_traits.rs  buildlog_traits.rs  buildplanbuilder_traits.rs  buildtimer_traits.rs  executorconfig_traits.rs  executorerror_traits.rs  executorrunconfig_traits.rs  functions.rs  mod.rs  outputcollector_traits.rs  sandboxconfig_traits.rs  stepid_traits.rs  stepkind_traits.rs  steppriorityqueue_traits.rs  types.rs
crates/oxilean-build/src/file_watcher/: functions.rs  mod.rs  tests.rs  types.rs
crates/oxilean-build/src/incremental/: buildphasetimer_traits.rs  dependencyedgekind_traits.rs  dependencyextractor_traits.rs  fileeventprocessor_traits.rs  fingerprint_traits.rs  fingerprintcache_traits.rs  functions.rs  incrementalbuildprogress_traits.rs  incrementalbuildschedule_traits.rs  incrementalcacheevictionpolicy_traits.rs  incrementalconfig_traits.rs  incrementalerror_traits.rs  incrementalstats_traits.rs  invalidationreason_traits.rs  invalidationresult_traits.rs  mod.rs  modulegraph_traits.rs  types.rs
crates/oxilean-build/src/manifest/: envoverrideset_traits.rs  functions.rs  lintconfig_traits.rs  lockfile_traits.rs  manifesterror_traits.rs  mod.rs  packagemetadata_traits.rs  packageregistry_traits.rs  platformcondition_traits.rs  platformresolver_traits.rs  tomlserialvalue_traits.rs  types.rs  version_traits.rs  versionconstraint_traits.rs  versionparseerror_traits.rs  workspaceconfig_traits.rs
crates/oxilean-build/src/opt_incremental/: artifacttracker_traits.rs  buildcycle_traits.rs  buildschedulehint_traits.rs  changebatch_traits.rs  concurrentinvalidationset_traits.rs  dependencygraphbuilder_traits.rs  dirtyset_traits.rs  fingerprintstore_traits.rs  fullincrementalcache_traits.rs  functions.rs  incrartifactkind_traits.rs  incrementalbuildstate_traits.rs  incrementalcompilationconfig_traits.rs  mod.rs  (+11 more)
crates/oxilean-cli/: Cargo.toml  README.md  TODO.md
crates/oxilean-cli/src/: main.rs
crates/oxilean-codegen/: Cargo.toml  README.md  TODO.md
crates/oxilean-codegen/src/: codegen_infra.rs  codegen_types.rs  lib.rs
crates/oxilean-elab/: Cargo.toml  README.md  TODO.md
crates/oxilean-elab/src/: elab_infra.rs  elab_types.rs  lib.rs  meta_bridge.rs
crates/oxilean-kernel/: Cargo.toml  README.md  TODO.md
crates/oxilean-kernel/benches/: kernel_perf.rs
crates/oxilean-kernel/src/: kernel_infra.rs  kernel_util.rs  lib.rs
crates/oxilean-kernel/tests/: prop_tests.proptest-regressions  prop_tests.rs
crates/oxilean-lint/: Cargo.toml  README.md  TODO.md
crates/oxilean-lint/src/: lib.rs  lint_infra.rs  lint_types.rs
crates/oxilean-meta/: Cargo.toml  README.md  TODO.md
crates/oxilean-meta/src/: functions.rs  lib.rs  libconfig_traits.rs  libdiff_traits.rs  libextconfig1300_traits.rs  libextdiff1300_traits.rs  metafeatures_traits.rs  metalibcountermap_traits.rs  metalibextmap_traits.rs  metalibstatemachine_traits.rs  perfstats_traits.rs  types.rs
crates/oxilean-parse/: Cargo.toml  README.md  TODO.md
crates/oxilean-parse/src/: lib.rs  parse_infra.rs  parse_types.rs
crates/oxilean-runtime/: Cargo.toml  README.md  TODO.md
crates/oxilean-runtime/src/: lib.rs
crates/oxilean-std/: Cargo.toml  README.md  TODO.md
crates/oxilean-std/src/: functions.rs  functions_2.rs  lib.rs  multimap_traits.rs  registry.rs  scopetable_traits.rs  std_utilities.rs  stdversion_traits.rs  trie_traits.rs  types.rs
crates/oxilean-wasm/: .gitignore  Cargo.toml  README.md  build-wasm.sh  oxilean.d.ts
crates/oxilean-wasm/src/: api.rs  error.rs  lib.rs  types.rs  wasm_api.rs
crates/oxilean/src/: lib.rs
(+5103 files in other folders)
