[package]
name = "oxilean-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxilean-codegen"
description = "OxiLean code generator - LCNF-based compilation and optimization"
readme = "README.md"
keywords = ["lean", "codegen", "compiler", "optimization", "lcnf"]
categories = ["development-tools", "development-tools::build-utils"]

[dependencies]
oxilean-kernel = { workspace = true }
