[package]
name = "oxilean-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxilean-runtime"
description = "OxiLean runtime - Memory management, closures, I/O, and task scheduling"
readme = "README.md"
keywords = ["lean", "runtime", "memory", "closures", "evaluation"]
categories = ["development-tools"]

[lib]
name = "oxilean_runtime"
path = "src/lib.rs"

[dependencies]
oxilean-kernel = { workspace = true }

[dev-dependencies]

[features]
default = []
