[package]
name = "oxilean-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxilean-wasm"
description = "WebAssembly bindings for OxiLean"
readme = "README.md"
keywords = ["lean", "wasm", "webassembly", "type-theory", "browser"]
categories = ["wasm", "development-tools"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxilean-kernel = { workspace = true }
oxilean-parse = { workspace = true }
oxilean-elab = { workspace = true }
wasm-bindgen = { version = "0.2.120", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3.97", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "serde", "serde_json", "serde-wasm-bindgen", "js-sys"]

[dev-dependencies]
